CI-comment added to main

--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 jobs:
-  PR comment:
+  PR_comment:
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
@@ -17,7 +17,7 @@ jobs:
         env:
           NUMBER: ${{ github.event.issue.number }}
 
-  PR comment w check for name:
+  PRC_w_check_name:
     if: ${{ github.event.issue.pull_request && (github.actor.login == 'hypotrochoid' || github.actor.login == 'winston-bosan') }}
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +26,7 @@ jobs:
         env:
           NUMBER: ${{ github.event.issue.number }}
 
-  PR comment w check for name and content:
+  PRc_check_name_and_content:
     if: ${{ github.event.issue.pull_request && (github.actor.login == 'hypotrochoid' || github.actor.login == 'winston-bosan') && contains(github.event.comment.body, 'integrationNOW') }}
     runs-on: ubuntu-latest
     steps:
@@ -34,11 +34,3 @@ jobs:
           echo A comment on PR $NUMBER w check for name and content
         env:
           NUMBER: ${{ github.event.issue.number }}
-
-  admin_pr_commented:
-    if: github.event.issue.pull_request && (github.actor.login == 'hypotrochoid' || github.actor.login == 'winston-bosan') && contains(github.event.comment.body, 'integrationNOW')  # if pr, if micah, if integrationNOW, else exit 1
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo yep it is micah or Simon
-          echo the github event looks like this... ${{ github.event.issue.pull_request }}
