--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo A comment on PR ${{ github.event.issue }}
+          echo A comment on PR ${{ toJSON(github.event.issue) }}
+          echo ${{ toJSON(github.actor.login)}}
         env:
           NUMBER: ${{ github.event.issue.number }}
 
