CI-comment added to main

--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -35,5 +35,6 @@ jobs:
       - run: |
           echo A comment on PR $NUMBER w check for name and content
           echo "I am PR#:${{ github.event.issue.number }}"
+          echo "running on branch ${GITHUB_REF##*/}"
         env:
           NUMBER: ${{ github.event.issue.number }}
