CI-comment added to main

--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -36,5 +36,8 @@ jobs:
           echo A comment on PR $NUMBER w check for name and content
           echo "I am PR#:${{ github.event.issue.number }}"
           echo "running on branch ${GITHUB_REF##*/}"
+          GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
         env:
           NUMBER: ${{ github.event.issue.number }}
+          GIT_BRANCH: ${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
