--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -31,6 +31,8 @@ jobs:
   PRc_check_name_and_content:
     if: ${{ github.event.issue.pull_request && (github.event.issue.user.login == 'hypotrochoid' || github.event.issue.user.login == 'winston-bosan') && contains(github.event.comment.body, 'integrationNOW') }}
     runs-on: ubuntu-latest
+    outputs:
+      pr_num: ${{ github.event.issue.number }}
     steps:
       - run: |
           echo A comment on PR $NUMBER w check for name and content
@@ -42,3 +44,12 @@ jobs:
         env:
           NUMBER: ${{ github.event.issue.number }}
           GIT_BRANCH: ${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+
+  extract_sha_pr_name_to_output:
+    needs: [PRc_check_name_and_content]
+    runs-on: ubuntu-latest
+    steps: |
+      curl -L \                                  
+      -H "Accept: application/vnd.github+json" \
+      -H "X-GitHub-Api-Version: 2022-11-28" \
+      https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }} | jq .head.ref
