--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -48,8 +48,9 @@ jobs:
   extract_sha_pr_name_to_output:
     needs: [PRc_check_name_and_content]
     runs-on: ubuntu-latest
-    steps: |
-      curl -L \                                  
-      -H "Accept: application/vnd.github+json" \
-      -H "X-GitHub-Api-Version: 2022-11-28" \
-      https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }} | jq .head.ref
+    steps:
+      - run: |
+          curl -L \                                  
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }} | jq .head.ref
