--- a/.github/workflows/ci-comment.yml
+++ b/.github/workflows/ci-comment.yml
@@ -50,8 +50,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          curl -L \
+          tempHeadRefName=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }}" | jq .head.ref
+            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }}" | jq .head.ref )
+          
+          tempHeadRefSHA=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }}" | jq .head.sha )
+          
+          echo $tempHeadRefName
+          echo $tempHeadRefSHA
