--- a/.github/workflows/manual_triggered_dispatch_integration.yml
+++ b/.github/workflows/manual_triggered_dispatch_integration.yml
@@ -1,13 +1,10 @@
-name: Dispatch Based CI Comment Triggered Integration Test with Publishing
+name: CI Comment Triggered Integration Test with Publishing
 
 on:
+  issue_comment:
+    types: [ created ]
   workflow_dispatch:
     inputs:
-      issueNumber:
-        description: 'Ditto'
-        required: false
-        default: ''
-        type: string
       logLevel:
         description: 'SHA of the commit you want to run integration on (defaults to which branch u call it from)'
         required: false
@@ -18,14 +15,44 @@ permissions:
   contents: read
 
 jobs:
-
-  dispatch_base:
+  work_dispatch:
+    if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
-    outputs:
-      pr_num: ${{ inputs.issueNumber }}
     steps:
       - run: |
-          echo ${{ github.event }}
+          echo A comment on PR ${{ toJSON(github.event) }}
+          echo ${{ github.event.issue.user.login}}
+        env:
+          PR_NUM: ${{ github.event.issue.number }}
+
+
+  PR_comment:
+    if: ${{ github.event.issue.pull_request }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo A comment on PR ${{ toJSON(github.event) }}
+          echo ${{ github.event.issue.user.login}}
+        env:
+          PR_NUM: ${{ github.event.issue.number }}
+
+  PRC_w_check_name:
+    if: ${{ github.event.issue.pull_request && (github.event.issue.user.login == 'hypotrochoid' || github.event.issue.user.login == 'winston-bosan') }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo A comment on PR $NUMBER w check for name
+          echo ${{ github.event.issue.user.login }}
+        env:
+          NUMBER: ${{ github.event.issue.number }}
+
+  PRc_check_name_and_content:
+    if: ${{ github.event.issue.pull_request && (github.event.issue.user.login == 'hypotrochoid' || github.event.issue.user.login == 'winston-bosan') && contains(github.event.comment.body, 'integrationNOW') }}
+    runs-on: ubuntu-latest
+    outputs:
+      pr_num: ${{ github.event.issue.number }}
+    steps:
+      - run: |
           echo A comment on PR $NUMBER w check for name and content
           echo "I am PR#:${{ github.event.issue.number }}"
           echo "running on branch ${GITHUB_REF##*/}"
@@ -37,7 +64,7 @@ jobs:
           GIT_BRANCH: ${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
 
   extract_sha_pr_name_to_output:
-    needs: [dispatch_base]
+    needs: [PRc_check_name_and_content]
     runs-on: ubuntu-latest
     outputs:
       branchName: ${{ steps.api.outputs.branchName }}
@@ -49,13 +76,13 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.dispatch_base.outputs.pr_num }}" | jq .head.ref )
+            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }}" | jq .head.ref )
           
           tempHeadRefSHA=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.dispatch_base.outputs.pr_num }}" | jq .head.sha )
+            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.PRc_check_name_and_content.outputs.pr_num }}" | jq .head.sha )
           
           echo $tempHeadRefName
           echo $tempHeadRefSHA
