--- a/.github/workflows/manual_triggered_dispatch_integration.yml
+++ b/.github/workflows/manual_triggered_dispatch_integration.yml
@@ -21,9 +21,9 @@ jobs:
   dispatch_base:
     runs-on: ubuntu-latest
     outputs:
-      pr_num: ${{ steps.extract_pr_num.outputs.pr_num || inputs.issueNumber }}
+      branch_name: ${{ steps.extract_pr_branch_name.outputs.git_branch }}
     steps:
-      - id: extract_pr_num
+      - id: extract_pr_branch_name
         run: |
           echo ${{ github.event }}
           echo ${{ github.ref }}
@@ -31,48 +31,15 @@ jobs:
           echo "I am PR#:${{ github.event.issue.number }}"
           echo "running on branch ${GITHUB_REF##*/}"
           GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
-          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+          echo "git_branch=$GIT_BRANCH" >> $GITHUB_ENV
           echo "$GIT_BRANCH"
-          
-          PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')
-          echo "$PR_NUMBER"
-          echo "pr_num=$PR_NUMBER" >> "$GITHUB_OUTPUT"
-        env:
-          NUMBER: ${{ github.ref || github.event.issue.number }}
-          GIT_BRANCH: ${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
-
-  extract_sha_pr_name_to_output:
-    needs: [ dispatch_base ]
-    runs-on: ubuntu-latest
-    outputs:
-      branchName: ${{ steps.api.outputs.branchName }}
-      headSHA: ${{ steps.api.outputs.headSHA }}
-    steps:
-      - id: api
-        run: |
-          tempHeadRefName=$(curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.dispatch_base.outputs.pr_num }}" | jq .head.ref )
-          
-          tempHeadRefSHA=$(curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/winston-bosan/isolation/pulls/${{ needs.dispatch_base.outputs.pr_num }}" | jq .head.sha )
-          
-          echo $tempHeadRefName
-          echo $tempHeadRefSHA
-          
-          echo "branchName=$tempHeadRefName" >> "$GITHUB_OUTPUT"
-          echo "headSHA=$tempHeadRefSHA" >> "$GITHUB_OUTPUT"
 
   printOut:
     runs-on: ubuntu-latest
-    needs: extract_sha_pr_name_to_output
+    needs: dispatch_base
     steps:
       - env:
-          OUTPUT1: ${{needs.extract_sha_pr_name_to_output.outputs.branchName}}
-          OUTPUT2: ${{needs.extract_sha_pr_name_to_output.outputs.headSHA}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+          OUTPUT1: ${{needs.dispatch_base.outputs.branch_name}}
+        run: echo "$OUTPUT1"
+      - run: |
+          echo "$GIT_BRANCH"
