--- a/.github/workflows/manual_triggered_dispatch_integration.yml
+++ b/.github/workflows/manual_triggered_dispatch_integration.yml
@@ -1,4 +1,4 @@
-name: Dispatch Based CI Comment Triggered Integration Test with Publishing
+name: Manual Dispatch Based CI Comment Triggered Integration Test with Publishing
 
 on:
   workflow_dispatch:
